# tegman

./: .env  .gitignore  Cargo.toml  README.md  appspec.yml
.cargo/: config.toml
.github/workflows/: main.yml
contract/: Cargo.toml
contract/src/: base.rs  client.rs  command.rs  data.rs  lib.rs  operation.rs  payload.rs  prelude.rs  request.rs  response.rs  test.rs  util.rs
lambda/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
system_controller/: Cargo.toml
system_controller/src/: client.rs  main.rs
tegmen/: Cargo.toml  crontab  deploy.sh
tegmen/scripts/: after_install.sh  before_install.sh  deploy.sh  discover-pi.sh  setup-nix.sh
tegmen/src/: client.rs  main.rs
temperature_lambda/: Cargo.toml
temperature_lambda/src/: client.rs  dispatcher.rs  main.rs  test.rs  util.rs
temperature_lambda/src/entity/: mod.rs  prelude.rs  temperature.rs
terraform/: main.tf
terraform/api-gateway/: main.tf
terraform/codedeploy/: main.tf
terraform/lambda/: main.tf
test_binary/: Cargo.toml
test_webserver/: Cargo.toml
test_webserver/src/: main.rs
