[package]
name = "system_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.1", features =["behavior-version-latest"]}
aws-credential-types = "1.2.0"
aws-sign-v4 = "0.3.0"
aws_lambda_events = "0.15.1"
lambda_runtime = "0.11.2"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
contract = { path = "../contract" }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["serde_derive"] }
chrono = { version = "0.4.38", features = ["serde"] }