[package]
name = "tegmen"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.1", features =["behavior-version-latest"]}
aws-credential-types = "1.2.0"
aws-sign-v4 = "0.3.0"
chrono = "0.4.38"
dht22_pi = "1.0.0"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.38.0", features = ["full"] }
contract = { path = "../contract" }
serde_json = "1.0.117"
hostname = "0.4.0"
